fix: black inputs but otherwise light design when in dark mode

--- a/src/styles/axioms.css
+++ b/src/styles/axioms.css
@@ -1,3 +1,8 @@
+#egr-root {
+  /* will not prevent forced dark mode */
+  color-scheme: only light;
+}
+
 #egr-root svg {
   display: inline;
   height: 1.3em;
